@@ -98,6 +98,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #15841: The readable(), writable() and seekable() methods of
+  io.BytesIO and io.StringIO objects now raise ValueError when the object has
+  been closed.  Patch by Alessandro Moura.
+
 - Issue #12776,#11839: call argparse type function (specified by add_argument)
   only once. Before, the type function was called twice in the case where the
   default was specified and the argument was given as well.  This was
